[gd_scene load_steps=2 format=3 uid="uid://dx5u3h8ppeab0"]

[ext_resource type="Script" uid="uid://bvm0bgcwmfdpn" path="res://scenes/menu/preferences_window.gd" id="1_ttn5r"]

[node name="PreferencesWindow" type="PopupPanel"]
title = "Settings"
initial_position = 1
size = Vector2i(537, 618)
visible = true
borderless = false
script = ExtResource("1_ttn5r")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 533.0
offset_bottom = 614.0
color = Color(4.21144e-07, 0.300865, 0.300865, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 533.0
offset_bottom = 614.0

[node name="BGMCheckbutton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Main menu background music"

[node name="GameSoundsCheckbutton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Game turn sounds"

[node name="ReplayShowOpponentHandButton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
button_pressed = true
text = "Replays show opponent hand"

[node name="TrueRandomSelectCheckbox" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "True random char select"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="RoomSettingsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Custom Room Creation"

[node name="EnforceTimerCheckbutton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
button_pressed = true
text = "Enforce timers with game loss"

[node name="StartingTimersLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Starting timers:"

[node name="StartingTimersSelection" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="MinTimePerChoiceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Minimum time to make each choice"

[node name="MinimumTimeSelection" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="BestOfLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Best Of:"

[node name="BestOfSelection" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
disabled = true
selected = 0
item_count = 5
popup/item_0/text = "1"
popup/item_0/id = 1
popup/item_1/text = "3"
popup/item_1/id = 3
popup/item_2/text = "5"
popup/item_2/id = 5
popup/item_3/text = "7"
popup/item_3/id = 7
popup/item_4/text = "âˆž"
popup/item_4/id = 4

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="AILabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "AI games"

[node name="AIFirstPlayerCheckbutton" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Randomize first player vs AI"

[connection signal="toggled" from="VBoxContainer/BGMCheckbutton" to="." method="_on_bgm_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/GameSoundsCheckbutton" to="." method="_on_game_sounds_check_box_toggled"]
[connection signal="toggled" from="VBoxContainer/ReplayShowOpponentHandButton" to="." method="_on_replay_show_opponent_hand_button_toggled"]
[connection signal="toggled" from="VBoxContainer/TrueRandomSelectCheckbox" to="." method="_on_true_random_select_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/EnforceTimerCheckbutton" to="." method="_on_enforce_timer_check_box_toggled"]
[connection signal="item_selected" from="VBoxContainer/StartingTimersSelection" to="." method="_on_starting_timers_selection_item_selected"]
[connection signal="item_selected" from="VBoxContainer/MinimumTimeSelection" to="." method="_on_minimum_time_selection_item_selected"]
[connection signal="toggled" from="VBoxContainer/AIFirstPlayerCheckbutton" to="." method="_on_ai_first_player_checkbutton_toggled"]
